src/styles/timeline.scss
.timeline-container {
  display: flex;
  flex-direction: row;
  overflow-x: auto;
  .timeline-line {
    position: relative;
    border-top: 4px solid var(--primary);
    margin-left: 1rem;
    margin-top: 1rem;
    padding-inline: 0.5rem;
    min-width: 70%;
    .timeline-line-date {
      font-size: 2rem;
      font-weight: 700;
      font-family: "Courier New", Courier, monospace;
      margin-top: 1rem;
      color: var(--text-color);
    }
    .timeline-line-content {
      margin-left: 1rem;
      color: var(--text-color);
    }
    &::before {
      content: "";
      width: 1rem;
      aspect-ratio: 1;
      border-radius: 50%;
      background-color: var(--blob-image-color-left);
      position: absolute;
      top: -0.58rem;
      left: -1rem;
      z-index: 2;
    }
    &::after {
      content: "";
      width: 1ch;
      height: 2.5rem;
      border-radius: 2px;
      border-left: 2px solid var(--blob-image-color-right);
      border-bottom: 2px solid var(--blob-image-color-right);
      position: absolute;
      top: -0rem;
      left: -0.58rem;
      z-index: 1;
    }
  }
}

@media (min-width: 768px) {
  .timeline-container {
    .timeline-line {
      min-width: 20%;
    }
  }
}

